--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,7 @@
 name: CI
 on:
   # Trigger on open, synchronize or reopen PR activity against the default base branch
-  pull_request:
+  pull_request_target:
     branches: [ "master" ]
 jobs:
   Validate-Metadata:
