--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,12 +51,14 @@ jobs:
           pushd pull-request
           echo "Fetching base branch '${BASE}':"
           git fetch origin ${BASE} --depth=1
+          git remote add mainRepo git@github.com:cardano-foundation/cardano-token-registry.git
+          git fetch mainRepo
           echo
 
           echo "Obtaining PR file change diff:"
           echo "BASE: ${BASE}"
           echo
-          git --no-pager diff --name-status origin/"${BASE}" HEAD > "HEAD.diff"
+          git --no-pager diff --name-status HEAD..mainRepo/master > "HEAD.diff"
           cat "HEAD.diff"
           echo
 
