--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -76,8 +76,9 @@ jobs:
           [ -f "fail-location" ] && echo "ABORTING: File change location validation failed"
           [ -f "fail-filename" ] && echo "ABORTING: File name validation failed"
           [ -f "fail-subject-is-hex" ] && echo "ABORTING: Subject-is-hex validation failed"
-          [ -f "fail-subject-length" ] && echo "ABORTING: Subject-length validation failed"
-          [ -f "fail-location" ] || [ -f "fail-filename" ] || [ -f "fail-subject-is-hex" ] || [ -f "fail-subject-length" ] && exit 1
+          # [ -f "fail-subject-length" ] && echo "ABORTING: Subject-length validation failed"
+          [ -f "fail-location" ] || [ -f "fail-filename" ] || [ -f "fail-subject-is-hex" ] && exit 1
+          # [ -f "fail-location" ] || [ -f "fail-filename" ] || [ -f "fail-subject-is-hex" ] || [ -f "fail-subject-length" ] && exit 1
 
           popd
           echo "Obtaining the latest metadata GitHub PR validation tool:"
